src/test/deca/context/valid/decl_field_init.deca
// Description:
//    Test d'une déclaration de champs avec initialisation
//
// Résultats:
//    OK
//
// Historique:
//    créé le 19/01/2017


class A {
  int x = 0;
}
